--- a/host.html
+++ b/host.html
@@ -11,10 +11,12 @@
     <div>
         <button onclick="startNewGame()">Start New Game</button>
         <p id="game-code-display">Game Code: </p>
+         <p id="host-password-display">Password: </p>
     </div>
     <div>
         <h2>Resume Game</h2>
         <input type="text" id="resume-game-code" placeholder="Enter Game Code" />
+        <input type="text" id="host-game-password" placeholder="Enter Game Password" />
         <button onclick="resumeGame()">Resume</button>
         <div id="resume-status" style="margin-top: 10px; color: red;"></div>
         <div id="player-list" style="margin-top: 20px;"></div>
